# UAgent

./: .env.example  .gitignore  AGENTS.md  BLOCKING_FIX.md  CLAUDE.md  COMMAND_EXECUTION_FIXES.md  DEEPRESEARCH_INTERGRATION.md  IMPLEMENTATION_SUMMARY.md  JSON_IMPORT_FIX.md  LLM_LOGGING_GUIDE.md  MAX_TOKENS_CONFIG.md  NOHUP_FIX.md  OPENHANDS_DOCKER_GROUP_SOLUTION.md  OPENHANDS_FINAL_STATUS.md  OPENHANDS_FIXES_SUMMARY.md  OPENHANDS_HEADLESS_CLI_SOLUTION.md  OPENHANDS_IMPROVEMENTS.md  OPENHANDS_INTEGRATION.md  OPENHANDS_MONITORING.md  OPENHANDS_PERMISSION_FIX.md  OPENHANDS_RUNTIME_INVESTIGATION.md  OPENHANDS_V3_MIGRATION.md  PARALLELISM_CONFIG.md  PATH_FIX.md  PLAN.md  REPOMASTER_INTEGRATION.md  SCIENTIFIC_RESEARCH_INTEGRATION.md  STREAMING_IMPLEMENTATION.md  TREE_VIEW_TEST_REPORT.md  TRUNCATION_FIX.md  UNIFIED_LOGGING.md  USAGE.md  ask.md  docker-compose.openhands.override.yml  list_openhands_logs.sh  monitor_backend.sh  monitor_openhands.sh  package-lock.json  test_adaptive_retry.py  test_aira_endpoints.py  (+24 more)
backend/: .env.example  =0.1.7  REPORT_SYSTEM_SUMMARY.md  RESEARCH_HISTORY_INTEGRATION.md  conftest.py  pyproject.toml  requirements-framework.txt  requirements-openhands.txt  requirements.txt  test_api_startup.py  test_report_generation.py
backend/agent_laboratory_local/: SUPERVISION_README.md  agent_times_1.txt  monitor_lab.sh  reset_experiment_phase.py  supervision.py
backend/ai_scientist_local/: ANTI_FRAUD_IMPLEMENTATION.md  JSON_PARSING_FIX_SUMMARY.md  experiment_validator.py  start_htap_research.sh  test_qwen_vlm.py
backend/app/: __init__.py  main.py
backend/config/: development.yaml  production.yaml
backend/data/: session_index.json
backend/docker/: Dockerfile.runtime
backend/scientific_research/: __init__.py  groundtruth_runner.py
backend/scripts/: __init__.py  cli_research.py  debug_playwright.py  test_codeact_execute.py  test_codeact_ready.py  test_docker_integration.py  test_env_config.py  test_openhands_runtime.py
backend/test/: __init__.py  conftest.py  llm_test_utils.py  test_codeact_runtime.py  test_gepa_config.py  test_meta_opt_gate.py
backend/tests/: test_orchestrator.py
backup/: .gitignore  (+1 more)
(+304 files in other folders)
